dashboard.css
/* ... */
.mail{
	width: 25%;
	height: 100%;
	margin-left: 0;
	box-shadow: inset 0em .0 .05em .05em rgba(136,136,136,0.75); 
    border-radius: .8em;

}

.contacts{
	width: 25%;
	height: 100%;
	margin-left: 9.9%;
    border-radius: .8em;
	box-shadow: inset 0em .0 .05em .05em rgba(136,136,136,0.75); 
	border: .01em solid rgba(136,136,136,0.75);
}

.alerrts{
	width: 25%;
	height: 100%;
	margin-left: 9.9%;
	box-shadow: inset 0em .0 .05em .05em rgba(136,136,136,0.75); 
    border-radius: .8em;

}

.horiz-button-icon-body{
    border-radius: .8em 0em 0em .8em;
}


.mail ion-icon{
	color: white;
	font-size: 1.8em;
	margin-top: .16em;


}

.contacts ion-icon{
	color: white;
	font-size: 1.8em;
	margin-top: .16em;

}

.alerrts ion-icon{
	color: white;
	font-size: 1.8em;
	margin-top: .16em;

}

.horiz-button-icon-txt{
	vertical-align: middle;
	font-family: Montserrat, sans-serif;
	font-size: .8em;
	text-align: center;
	padding-bottom:2em;
	padding-top: .25em;

}

.mail .horiz-button-icon-txt{
	padding-left: .1em;
	letter-spacing: 0.1em;


}
.alerrts .horiz-button-icon-txt{
	/*padding-left: .7em;*/
	padding-left: .6em;
	letter-spacing: 0.1em;

}

.contacts .horiz-button-icon-txt{
	/*padding-left: .7em;*/
	letter-spacing: 0.05em;
}

/*THIS IS TO GIVE INDICATION OF UNREAD Mail/Alerts/New Contacts and shit*/
.notification{
	background-color: white;
	height: 1.2em;
	width: 1.2em;
	line-height: 1.2em;
	font-size: .8em;
	border-radius: 5em;
	vertical-align: middle;
	color:rgb(112,128,144);
	margin: 0;
	margin-bottom: 1.5em;
	margin-right: .24em;


}



.mail .horiz-button-icon-body{
	height:100%;
	width: 45%;
	background-color:rgba(131,52,113,.75);

	text-align: center;
}
.contacts .horiz-button-icon-body{
	height:100%;
	width: 45%;
	background-color:rgba(	30,130,76,.78);
	text-align: center;
}

.alerrts .horiz-button-icon-body{
	width: 45%;
	height:100%;
	text-align: center;
	background-color:rgba(205,92,92,.78);

}


 /***********HEADER FOR THE CARDS***************/
.groups-body{
	/*Rounded Corners*/

	border-radius: .2em;
	border: 0.05em solid rgba(136,136,136,0.50);
	box-shadow: 0em 0em .3em 0em rgba(136,136,136,0.75);

	/*height: 8%;*/
	padding-bottom: 0vw; 
	padding-top: 0; 
	width: 39vw;
	margin-left: 3vw;
	margin-right: 3vw;
	padding-left: 2vw;
	padding-right: 2vw;
	margin-top: 0;
	height:55vw;
	margin-bottom: 0;

	/*Flex container parameters-- so the box grows down w/ children*/
	display: inline-flex;
	flex-direction: column;
	background-color: rgba(255, 255, 255,1);
	flex: 1;
	
}


.event-body{
	/*Rounded Corners*/

	border-radius: .2em;
	border: 0.05em solid rgba(136,136,136,0.50);
	box-shadow: 0em 0em .3em 0em rgba(136,136,136,0.75);


	margin-top: 0;
	padding-top: 0; 
	width: 39vw;
	height:55vw;


	/*height: 8%;*/
	display:inline-block;
	padding-left: 2vw;
	padding-right: 2vw;
	margin-left: 0;

	/*Flex container parameters-- so the box grows down w/ children*/
	display: inline-flex;
	flex-direction: column;
	background-color: rgba(255, 255, 255,1);
	overflow: auto;
	flex: 1;

}

.group-event-header{
	width: 99%;
	display:inline-block;
	vertical-align: middle;
	padding-bottom: 1em;
	margin-bottom: 2em; 
	border-bottom: 0.05em solid rgba(0,0,0,0.4);
	background-color: rgba(255, 255, 255,1);

}


.group-event-header-txt{
	margin-top: 0px;
	padding-top: .1em;
	text-align: center; 
	font-family: 'Open Sans', sans-serif;
	letter-spacing: 0.05em;
	padding-bottom: 0; 
	margin-bottom: .25em;
	background-color: rgba(255, 255, 255,1);

}



.group-class-options{
	font-family: 'Montserrat', sans-serif;
	text-align: center;
	padding-top: 0; 
	margin-top: 0;
	margin-bottom: 1em;
}

.category{
	margin-right: 1em;
	cursor: pointer;
}

/***************************** Search Bar *******************************/


.group-event-searchbar{
	background-color: rgba(144, 165, 169, .2); 
	width: 60%;
	height: 1.5em;
  	border-radius: .2em;
	border: .04em solid rgba(136,136,136,0.50);
	vertical-align: middle;
	padding-left: 0;
	display:inline-block;
	cursor: pointer;
}
.group-search .group-event-searchbar{
	display: table;
	margin: 0 auto;
}

.group-search{
}


.group-event-searchbar ion-icon{
  	vertical-align: middle;
  	padding: 0;
  	margin:0;
	width: 1em;
	height: 1em;
	/*color: rgba(30,130,76, .75);*/
	color:rgba(136,136,136, 1);
	text-align: left;
	display:inline-block;
  }

.search{
	font-family: 'Montserrat', sans-serif;
	color:rgba(136,136,136, 1);
	vertical-align: middle;
	padding:0;
	margin:0;
	display:inline-block;
}

/******* Event Calender *********/
.event-stripe{
	display:inline-block;
	margin:0px;
	padding:0;

}


.event-calender{
	display:inline-block;
	margin-top: -10em;
	padding:0;
	margin-bottom: -4em;

}
.event-calender ion-icon{
	width: 1em;
	height: 1em;
	vertical-align: middle;
	font-size: 2em;
	cursor: pointer;
	color: #1e824c;
  }

.calendar-txt{
	font-family: 'Montserrat', sans-serif;
	font-size: .75em;
	cursor: pointer;
	letter-spacing: 0.05em;
	margin: 0;
	padding: 0;
}

/*
#owner_admin{
	border-bottom: 2px solid; 
	border-bottom-color: #1e824c;
}*/
/******** Formatting Owner and Admin Icon and Profile PIc*******/

#favs-icon{
	width: 10%;
	height:90%;
	line-height: 4em;
	margin:0;
	margin-left: 48%;
	padding:0;
	vertical-align: middle;
	cursor: pointer;

}
#favs-icon img{
    height: 100%;
    width: 100%;
}




#owner-icon {
	padding: 0em;
	width: 5em;
	height: 5em;
	line-height: 5em;
}

#owner-icon img{
	display: inline;
    height: 100%;
    width: 100%;
    border-radius: 50%;
}

#admin-icon {
	padding: 0px;
	width: 5em;
	height: 5em;
	line-height: 5em;
}

#admin-icon img{
	display: inline;
    margin: 0 auto;

    height: 100%;
    width: 100%;
    border-radius: 50%;
 }
/* ... */

